[gd_scene load_steps=2 format=3 uid="uid://bqx1nnid8ahtk"]

[ext_resource type="Script" path="res://scripts/UI/pause_menu.gd" id="1_e3k2d"]

[node name="Pause menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e3k2d")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.156863, 0.14902, 0.14902, 0.494118)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 90
theme_override_constants/margin_right = 90

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game Paused"
horizontal_alignment = 1

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator3" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator4" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator5" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator6" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator7" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator8" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator9" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Resume_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Resume"

[node name="Quit_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit_button" to="." method="_on_quit_button_pressed"]
